@@ -1,5 +1,7 @@
 Changes for 1.1patch1:
 
+ - ZABBIX agent to bind even if TIME_WAIT sockets exist (Alexei)
+ - ZABBIX server to bind even if TIME_WAIT sockets exist (Alexei)
  - fixed notification report for Oracle (Eugene)
  - fixed large history of alarms displaying (Eugene)
  - fixed value mapping for latest data (Eugene)
